@@ -13,12 +13,13 @@
         Fuse.Ajax.Base.call(this, url, options);
         options = this.options;
 
-        this.onStop = options.onStop;
-        this.onTimerEvent = Fuse.Function.bind(this.start, this);
-
         this.updater = { };
         this.container = container;
-        this.url = url;
+        this.frequency = options.frequency;
+        this.maxDecay  = options.maxDecay;
+
+        this.onStop = options.onStop;
+        this.onTimerEvent = Fuse.Function.bind(this.start, this);
 
         // dynamically set readyState eventName to allow for easy customization
         var callbackName = 'on' + Request.Events[4],
@@ -41,15 +42,17 @@
 
   (function() {
     this.updateDone = function updateDone(request) {
-      var options = this.options, responseText = request.responseText;
-      if (options.decay) {
-        this.decay = (responseText == this.lastText ?
-          this.decay * options.decay : options.decay);
+      var options = this.options, decay = options.decay,
+       responseText = request.responseText;
+
+      if (decay) {
+        this.decay = Math.min(responseText == this.lastText ?
+          (this.decay * decay) : 1, this.maxDecay);
 
         this.lastText = responseText;
       }
       this.timer = Fuse.Function.delay(this.onTimerEvent,
-        Math.min(this.decay * options.frequency || options.maxDecay));
+        this.decay * this.frequency);
     };
 
     this.start = function start() {
@@ -60,6 +63,7 @@
       this.updater.abort();
       global.clearTimeout(this.timer);
       this.onStop && this.onStop.apply(this, arguments);
+      this.lastText = null;
     };
 
     // prevent JScript bug with named function expressions
